@@ -1,3 +1,4 @@
+* selection by rectangle in gtable 
 * fix height on gcombobox, buttons -- sizes to fill in x axis (sizePolicy like Qt?)
 * defaultWidget for buttons.
 * no tag<- methods for gaction?
