@@ -1,3 +1,9 @@
+2010-11-01  john verzani  <verzani@john-verzanis-macbook-pro.local>
+
+	* R/gslider.R (gsliderindex): changed so that can use vector of
+	orderable values. Pass to from argument initially.
+	
+
 2010-10-26  john verzani  <verzani@john-verzanis-macbook-pro.local>
 
 	* R/glabel.R (addHandler): for glabel and gimage -- both use event
